--- a/app/views/evaluations/grade_answers.html.erb
+++ b/app/views/evaluations/grade_answers.html.erb
@@ -46,10 +46,15 @@
       <h4>Navegación: respuestas por alumno</h4>
       <p>Total de estudiantes que han respondido: <%= @students.count %></p>
       <% if @students.count > 0 %>
+        <h5>Estudiantes con evaluación por calificar</h5>
         <ul class="pagination">
-          <% current_index = @students.index(@current_student) %>
-          <% previous_student = current_index > 0 ? @students[current_index - 1] : nil %>
-          <% next_student = current_index < @students.size - 1 ? @students[current_index + 1] : nil %>
+          <% current_index = @ungraded_students.index(@current_student) %>
+          <% previous_student = nil %>
+          <% next_student = nil %>
+          <% if current_index %>
+            <% previous_student = current_index > 0 ? @ungraded_students[current_index - 1] : nil %>
+            <% next_student = current_index < @ungraded_students.size - 1 ? @ungraded_students[current_index + 1] : nil %>
+          <% end %>
 
           <% if previous_student %>
             <li class="page-item">
@@ -65,8 +70,53 @@
             </li>
           <% end %>
 
-          <% @students.each do |student| %>
-            <li class="page-item <%= 'active' if student == @student %>">
+          <% @ungraded_students.each do |student| %>
+            <li class="page-item <%= 'active' if student == @current_student %>">
+              <%= link_to student.user.name, grade_answers_evaluation_path(@evaluation, student_id: student.id), class: "page-link" %>
+            </li>
+          <% end %>
+
+          <% if next_student %>
+            <li class="page-item">
+              <%= link_to grade_answers_evaluation_path(@evaluation, student_id: next_student.id), class: "page-link" do %>
+                <i class="bi bi-arrow-right"></i>
+              <% end %>
+            </li>
+          <% else %>
+            <li class="page-item disabled">
+              <a class="page-link" href="#" tabindex="-1" aria-disabled="true">
+                <i class="bi bi-arrow-right"></i>
+              </a>
+            </li>
+          <% end %>
+        </ul>
+        <hr>
+
+        <h5>Estudiantes con evaluación calificada</h5>
+        <ul class="pagination">
+          <% current_index = @graded_students.index(@current_student) %>
+          <% previous_student = nil %>
+          <% next_student = nil %>
+          <% if current_index %>
+            <% previous_student = current_index > 0 ? @graded_students[current_index - 1] : nil %>
+            <% next_student = current_index < @graded_students.size - 1 ? @graded_students[current_index + 1] : nil %>
+          <% end %>
+          <% if previous_student %>
+            <li class="page-item">
+              <%= link_to grade_answers_evaluation_path(@evaluation, student_id: previous_student.id), class: "page-link" do %>
+                <i class="bi bi-arrow-left"></i>
+              <% end %>
+            </li>
+          <% else %>
+            <li class="page-item disabled">
+              <a class="page-link" href="#" tabindex="-1" aria-disabled="true">
+                <i class="bi bi-arrow-left"></i>
+              </a>
+            </li>
+          <% end %>
+
+          <% @graded_students.each do |student| %>
+            <li class="page-item <%= 'active' if student == @current_student %>">
               <%= link_to student.user.name, grade_answers_evaluation_path(@evaluation, student_id: student.id), class: "page-link" %>
             </li>
           <% end %>
