--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -42,6 +42,7 @@
 
         <% if current_user&.user_role_id == UserRole.find_by(name: "Admin")&.id %>
           <td>
+            <%= link_to "Editar", edit_admin_course_path(course), class: "btn btn-warning" %>
             <%= button_to "Eliminar", course_path(course), method: :delete, data: { confirm: "¿Estás seguro de que quieres eliminar este curso?" }, class: "btn btn-danger" %>
           </td>
         <% end %>
