--- a/app/views/courses/show_admin.html.erb
+++ b/app/views/courses/show_admin.html.erb
@@ -39,15 +39,25 @@
   <!-- Contenido del curso -->
   <div class="row mt-4">
     <div class="col-md-12">
-      <h3>Contenido</h3>
+      <div class="d-flex justify-content-between align-items-center mb-2">
+        <h3 class="mb-0">Contenido</h3>
+        <%= link_to "Subir Material", upload_course_materials_path(@course), class: "btn btn-outline-secondary" %>
+      </div>
       <ul class="list-group">
         <% if @course.materials.any? %>
           <% @course.materials.each_with_index do |material, index| %>
             <li class="list-group-item d-flex justify-content-between align-items-center">
               <span><%= index + 1 %>. <%= material.name %></span>
-              
               <div class="d-flex">
-                <a href="#" class="btn btn-primary btn-sm me-2">Ver</a>
+                <!-- Ver material -->
+                <a href="<%= material_path(material) %>" class="btn btn-outline-primary btn-sm me-2">Ver</a>
+
+                <!-- Editar material (solo visible para admins) -->
+                <% if current_user&.admin? %>
+                  <%= link_to 'Editar', edit_course_material_path(@course, material), class: 'btn btn-outline-warning btn-sm me-2' %>
+                <% end %>
+
+                <!-- Eliminar material (solo visible para admins) -->
                 <% if current_user&.admin? %>
                   <%= button_to 'Eliminar', material_path(material), method: :delete, class: 'btn btn-danger btn-sm', data: { confirm: '¿Estás seguro de que deseas eliminar este material?' } %>
                 <% end %>
