--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -30,6 +30,7 @@
                 <%= link_to "Administrar Usuarios", admin_view_users_path, class: "btn btn-outline-secondary w-100 mb-2 fluid" %>
                 <%= link_to "Gestionar Reseñas de Profesores", admin_teacher_reviews_path, class: "btn btn-outline-secondary w-100 mb-2 fluid" %> <!-- Botón para gestionar reseñas -->
                 <%= link_to "Gestionar Reseñas de Cursos", admin_course_reviews_path, class: "btn btn-outline-secondary w-100 mb-2 fluid" %> <!-- Botón para gestionar reseñas de cursos -->
+                <%= link_to "Crear Curso", new_admin_course_path, class: "btn btn-outline-secondary w-100 mb-2 fluid" %>
             <% end %>
 
 
